--- a/package.json
+++ b/package.json
@@ -12,28 +12,32 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.2.0",
-		"@sveltejs/adapter-static": "^3.0.1",
-		"@sveltejs/kit": "^2.5.5",
-		"@sveltejs/vite-plugin-svelte": "^3.0.2",
-		"@types/eslint": "^8.56.7",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.36.0",
-		"globals": "^15.0.0",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-static": "^3.0.8",
+		"@sveltejs/kit": "^2.16.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@types/eslint": "^9.6.1",
+		"eslint": "^9.19.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^2.46.1",
+		"globals": "^15.14.0",
 		"prettier": "^3.4.2",
-		"prettier-plugin-svelte": "^3.2.2",
-		"svelte": "^4.2.7",
-		"svelte-check": "^3.6.9",
+		"prettier-plugin-svelte": "^3.3.3",
+		"svelte": "^5.19.6",
+		"svelte-check": "^4.1.4",
+		"svelte-preprocess": "^6.0.3",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.3",
-		"typescript-eslint": "^7.6.0",
-		"vite": "^5.2.8"
+		"typescript-eslint": "^8.22.0",
+		"vite": "^6.0.11"
 	},
 	"type": "module",
 	"dependencies": {
 		"chart.js": "^4.4.7",
 		"dotenv": "^16.4.7",
 		"moment": "^2.30.1"
+	},
+	"overrides": {
+		"cookie": "1.0.2"
 	}
 }
